@@ -5,6 +5,15 @@
 	diagnose teams not closely nested inside of target.
 
 	Backported from mainline
+	2019-12-11  Jakub Jelinek  <jakub@redhat.com>
+
+2019-12-20  Jakub Jelinek  <jakub@redhat.com>
+
+	PR target/92723
+	* tree-vect-patterns.c (vect_recog_rotate_pattern): If dt is not
+	vect_internal_def, use oprnd1 as is, without trying to cast it.
+	Formatting fix.
+
 	2019-11-27  Jakub Jelinek  <jakub@redhat.com>
 
 	PR debug/92664
